# champ_simulation

./: CMakeLists.txt  README.md  package.xml
launch/: bag_record.launch.py  bringup.launch.py  gazebo.launch.py  gazebo_ign.launch.py  robot_description.launch.py  robot_ign_sim.launch.py  robot_sim.launch.py  ros2_control.launch.py  rviz2.launch.py  teleop.launch.py
worlds/: default_ign.world  default_ign_test.sdf
